# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## Version 0.0.1
- Initial version.
- Security OAuth library added.
- Spring Boot (3.3.4) and Spring Cloud dependencies (4.1.3 / 2023.0.3) included.
- Spring Security and Keycloak integrated for authentication.
- JWT token added for secured API access.
- default application properties Included.