@@ -9,7 +9,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## Version 0.0.1
 - Initial version.
 - Security OAuth library added.
-- Spring Boot (3.3.4) and Spring Cloud dependencies (4.1.3 / 2023.0.3) included.
+- Spring Boot (3.3.5) and Spring Cloud dependencies (4.1.3 / 2023.0.3) included.
 - Spring Security and Keycloak integrated for authentication.
-- JWT token added for secured API access.
+- Add JWT token for secured API access.
 - default application properties Included.
+- Updated to receive multiple parameters to include in the JWT token.
